fix icon align

--- a/src/components/Layouts/Header/index.scss
+++ b/src/components/Layouts/Header/index.scss
@@ -508,9 +508,7 @@
   }
   .login-link__icon,
   .registration-link__icon {
-    position: relative;
-    top: 9px;
-    left: -5px;
+    vertical-align: middle;
     &:hover {
       fill: #3366ff;
       transition: fill .2s linear;
@@ -525,8 +523,11 @@
   .registration-link {
     text-decoration: none;
     border-radius: 4px;
-    margin-bottom: 13px;
     color: #90999e;
+    & span {
+      vertical-align: middle;
+      margin-left: 5px;
+    }
       &:hover {
         color: #3366ff;
         transition: fill .2s linear;
